# ingest-cli

./: .gitignore  README.md  Usage.md  config.example.yaml  lint.sh  pyproject.toml
.github/workflows/: ci.yml
doc/: architecture.excalidraw  architecture.md
ingest_cli/: __init__.py
ingest_cli/api/: __init__.py  auth.py  exceptions.py  ingestion.py
ingest_cli/cli/: __init__.py  main.py
ingest_cli/config/: __init__.py  exceptions.py  loader.py  settings.py
ingest_cli/mappers/: __init__.py  base.py  factory.py  field_mapper.py  identity.py  registry.py
ingest_cli/models/: __init__.py  annotations.py  document.py  event.py  file.py  properties.py
ingest_cli/pipeline/: __init__.py  orchestrator.py
ingest_cli/readers/: __init__.py  base.py  csv_reader.py  directory_reader.py  factory.py  json_reader.py  registry.py
ingest_cli/utils/: __init__.py  retry.py
ingest_cli/validation/: __init__.py  validator.py
openapi/: insight-ingestion-merged-components.yaml
specs/: 00-implementation_plan.md  01-project-foundation-cli.md  02-configuration-settings.md  03-authentication-client.md  04-pluggable-reader-framework.md  05-document-models.md  06-mapper-framework.md  07-ingestion-api-client.md  08-pipeline-orchestrator.md  09-cli-integration.md  10-error-handling-resilience.md  11-validation-preflight.md  12-linting-ci-improvements.md  13-mix-bugfixes.md  prompt.md  seed.md
tests/: __init__.py
tests/data/: complete_manifest.csv  sample_manifest.csv
tests/data/documents/: report_q1_2024.txt  technical_spec.txt  user_guide_v2.txt
tests/test_api/: test_auth.py  test_ingestion.py
tests/test_cli/: test_main.py
tests/test_config/: __init__.py  test_settings.py
tests/test_mappers/: __init__.py  test_mappers.py
tests/test_models/: test_models.py
tests/test_pipeline/: test_orchestrator.py
tests/test_readers/: __init__.py  test_csv_integration.py  test_readers.py  test_sample_data.py
tests/test_utils/: test_retry.py
tests/test_validation/: test_validator.py
